[package]
name = "mcmodfilelocaliztion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
anyhow = "1.0"
tempfile = "3.8"
zip = "0.6"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"
serde_json = "1.0.149"
